--- a/tasks/CentOS7.yml
+++ b/tasks/CentOS7.yml
@@ -36,11 +36,11 @@
     gpgkey: http://repo.indigo-datacloud.eu/repository/RPM-GPG-KEY-indigodc
 
 - name: Install YUM priorities package
-  package: yum-plugin-priorities
+  package: yum-plugin-priorities state=latest
 
 - name: Install OpenStack RDO (CentOS)
   package: name=centos-release-openstack-mitaka
   when: (indigo_version_major == "1")
 
 - name: Install EPEL repository (RedHat distros)
-  package: name=epel-release state: latest
+  package: name=epel-release state=latest
