--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,12 @@
 ---
-- fail:
-    msg="Bailing out.. this play requires <<indigo_version_major>>"
-    when: indigo_version_major is undefined
+#- assert:
+#    that: "ansible_version.full | version_compare('1.6', '>=')"
+#    msg: "You must update Ansible to at least 1.6 to use this version of INDIGO repository setup."
 
-- assert:
-    that: "ansible_version.full | version_compare('1.6', '>=')"
-    msg: "You must update Ansible to at least 1.6 to use this version of INDIGO repository setup."
+- name: CentOS7 specific tasks
+  include: CentOS7.yml 
+  when: ({{ ansible_distribution }} == "CentOS") and ({{ ansible_distribution_major_version }} == "7")"
 
-- name: OS specific tasks
-  include: "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
+- name: Ubuntu14 specific tasks
+  include: Ubuntu14.yml 
+  when: ({{ ansible_distribution }} == "Ubuntu") and ({{ ansible_distribution_major_version }} == "14")"
