--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-#- assert:
-#    that: "ansible_version.full | version_compare('1.6', '>=')"
-#    msg: "You must update Ansible to at least 1.6 to use this version of INDIGO repository setup."
+- assert:
+    that: "ansible_version.full | version_compare('2.1', '>=')"
+    msg: "You must update Ansible to at least 2.1 to use this version of INDIGO repository setup."
 
 - name: CentOS7 specific tasks
   include: CentOS7.yml 
