--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- fail:
+    msg: "Exiting: <<indigo_version_major>> not defined!"
+  when: indigo_version_major is not defined
+
 - assert:
     that: "ansible_version.full | version_compare('2.1', '>=')"
     msg: "You must update Ansible to at least 2.1 to use this version of INDIGO repository setup."
