--- a/tasks/CentOS7.yml
+++ b/tasks/CentOS7.yml
@@ -2,10 +2,10 @@
 
 - name: Add INDIGO-base YUM repository
   yum_repository:
-    name: "INDIGO-{{ indigo_version_major }}-base"
-    description: "INDIGO-{{ indigo_version_major }} - Base"
+    name: "INDIGO-{{ indigo_release }}-base"
+    description: "INDIGO-{{ indigo_release }} - Base"
     file: indigo1-base
-    baseurl: "http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_version_major }}/centos7/$basearch/base"
+    baseurl: "http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_release }}/centos7/$basearch/base"
     protect: yes
     enabled: yes
     priority: 40
@@ -14,10 +14,10 @@
 
 - name: Add INDIGO-updates YUM repository
   yum_repository:
-    name: "INDIGO-{{ indigo_version_major }}-updates"
-    description: "INDIGO-{{ indigo_version_major }} - Updates"
+    name: "INDIGO-{{ indigo_release }}-updates"
+    description: "INDIGO-{{ indigo_release }} - Updates"
     file: indigo1-updates
-    baseurl: "http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_version_major }}/centos7/$basearch/updates"
+    baseurl: "http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_release }}/centos7/$basearch/updates"
     protect: yes
     enabled: yes
     priority: 40
@@ -26,10 +26,10 @@
 
 - name: Add INDIGO-third-party YUM repository
   yum_repository:
-    name: "INDIGO-{{ indigo_version_major }}-third-party"
-    description: "INDIGO-{{ indigo_version_major }} - third-party"
+    name: "INDIGO-{{ indigo_release }}-third-party"
+    description: "INDIGO-{{ indigo_release }} - third-party"
     file: indigo1-third-party
-    baseurl: "http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_version_major }}/centos7/$basearch/third-party"
+    baseurl: "http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_release }}/centos7/$basearch/third-party"
     protect: yes
     enabled: yes
     priority: 40
@@ -44,7 +44,7 @@
 - name: Install OpenStack RDO (CentOS)
   yum: 
     name: centos-release-openstack-mitaka
-  when: (indigo_version_major == "1")
+  when: (indigo_release == "1")
 
 #- name: Install EPEL repository (RedHat distros)
 #  yum:
