boolean to enable/disable cloud-archive/RDO repositories

--- a/tasks/CentOS7.yml
+++ b/tasks/CentOS7.yml
@@ -44,7 +44,7 @@
 - name: Install OpenStack RDO (CentOS)
   yum: 
     name: centos-release-openstack-mitaka
-  when: (indigo_release == "1")
+  when: enable_openstack_distro_repo
 
 #- name: Install EPEL repository (RedHat distros)
 #  yum:
