--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,17 @@
 ---
+galaxy_info:
+  author: Pablo Orviz Fernandez
+  description: INDIGO-DataCloud repository deployment
+  license: Apache 2.0
+  min_ansible_version: 2.2
+  platforms:
+  - name: CentOS
+    versions:
+    - 7
+  - name: Ubuntu
+    versions:
+    - trusty
+  categories:
+  - packaging
 dependencies:
   - { role: 'geerlingguy.repo-epel', when: ansible_distribution == "CentOS" }
