Add Ubuntu 16 Xenial support
Which works basicaly the same as for Trusty, I just replaced the
static "trusty" repo names with "{{ ansible_distribution_release }}"
and renamed the tasks where appropriate.

--- a/tasks/Ubuntu14+16.yml
+++ b/tasks/Ubuntu14+16.yml
@@ -10,13 +10,13 @@
 
 - name: Add INDIGO-base APT repository
   apt_repository:
-    repo: "deb [arch=amd64] http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_release }}/ubuntu/ trusty main third-party"
+    repo: "deb [arch=amd64] http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_release }}/ubuntu/ {{ ansible_distribution_release }} main third-party"
     state: present
     filename: indigo
 
 - name: Add INDIGO-updates APT repository
   apt_repository:
-    repo: "deb [arch=amd64] http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_release }}/ubuntu/ trusty-updates main third-party"
+    repo: "deb [arch=amd64] http://repo.indigo-datacloud.eu/repository/indigo/{{ indigo_release }}/ubuntu/ {{ ansible_distribution_release }}-updates main third-party"
     state: present
     filename: indigo
 
