--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,6 @@
   include: CentOS7.yml 
   when: (ansible_distribution == "CentOS") and (ansible_distribution_major_version == "7")
 
-- name: Ubuntu14 specific tasks
-  include: Ubuntu14.yml 
-  when: (ansible_distribution == "Ubuntu") and (ansible_distribution_major_version == "14")
+- name: Ubuntu14/16 specific tasks
+  include: Ubuntu14+16.yml
+  when: (ansible_distribution == "Ubuntu") and (ansible_distribution_major_version == "14" or ansible_distribution_major_version == "16")
