Fix deprecated dependency format

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,4 +13,5 @@ galaxy_info:
     - trusty
     - xenial
 dependencies:
-  - { role: 'geerlingguy.repo-epel', when: ansible_distribution == "CentOS" }
+  - role: 'geerlingguy.repo-epel'
+    when: ansible_distribution == "CentOS"
