--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,3 +14,7 @@
 - name: Ubuntu14 specific tasks
   include: Ubuntu14.yml 
   when: (ansible_distribution == "Ubuntu") and (ansible_distribution_major_version == "14")
+
+- name: Ubuntu16 specific tasks
+  include: Ubuntu16.yml 
+  when: (ansible_distribution == "Ubuntu") and (ansible_distribution_major_version == "16")
