--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,3 +18,9 @@
 - name: Ubuntu16 specific tasks
   include: Ubuntu16.yml 
   when: (ansible_distribution == "Ubuntu") and (ansible_distribution_major_version == "16")
+
+- name: Install optional INDIGO packages
+  package:
+    name: "{{ item }}"
+  with_items:
+    - "{{ pkglist }}"
